--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,4 +3,6 @@ Pillow>=9.1.0
 pydantic>=2.9.2
 fastapi>=0.115.0
 uvicorn>=0.31.0
-psutil>=6.0.0
+psutil>=5.0.0
+fastapi-utils>=0.6.0
+typing-inspect>=0.9.0
